# Shoe_shop

./: .codeclimate.yml  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  schema.sql
.github/workflows/: lint.yml
data/: shoe_store.db
docs/: data_verification.txt
input/: Tovar.xlsx
src/: app.py  db.py  importer.py  repositories.py  ui_helpers.py  validate_data.py
